# unilog

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  ENGINEERING_BRIEF.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/: AGENTS.md
.github/: dependabot.yml  labeler.yml  maintainer-config.yml  release-drafter.yml
.github/context/: architecture.md  coding-standards.md  project-overview.md  release-process.md  rules.md
.github/issue_template/: bug_report.yml  feature_request.yml
.github/prompts/: dependabot.md  review.md
.github/scripts/github/: pr_helper.py
.github/scripts/llm/: base.py  gemini.py
.github/workflows/: ci.yml  codeql.yml  labeler.yml  maintainer-intelligence.yml  release-drafter.yml  reviewdog.yml  scorecard.yml
api/: app.py  config.py
api/dependencies/: rate_limiter.py
api/routers/: __init__.py  ai.py  health.py  live.py  log.py  system.py
api/schemas/: __init__.py  ai.py  analyze.py  log.py  task.py
api/security/: auth.py  network.py
api/services/: __init__.py  background_tasks.py
api/utils/: decompression.py  middleware.py
benchmarks/: README.md  __init__.py  evaluator.py  runner.py
benchmarks/engines/: __init__.py  base_engine.py  gemini_engine.py  mock_engine.py
benchmarks/reports/: 2026-07-12-210443.json
docs/: advanced-analytics-rfc.md  api.md  architecture.md  contributing.md  frontend-architecture.md  maintainer-intelligence.md  plugin-development.md  roadmap.md  security.md
docs/security/: security-triage-v0.3.5.md  security-triage-v0.3.6.md  security-triage-v0.3.7.md
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/src/: App.tsx  index.css
scripts/: analyze_windows_log.py  benchmark_concurrent.py  debug_parse.py  run_s1_s2.py  test_concurrent.py  test_powershell.ps1  test_realworld.py  test_upload_flow.py  test_windows_csv.py  upload_log.py
tests/: generate_realistic_logs.py  test_ai.py  test_analytics.py  test_api.py  test_detector.py  test_hardening.py  test_health.py  test_incidents.py  test_intelligence_regression.py  test_live.py  test_parsers.py  test_phase3.py  test_rules.py  test_security_analyzer.py  test_sessions_and_journeys.py
tests/security/: test_operational.py  test_path_confinement.py
unilog/: __init__.py  cli.py  core.py  detector.py  registry.py  stats.py  utils.py
unilog/analytics/: __init__.py  aliases.py  base.py  engine.py  health.py  helpers.py  math_helpers.py  registry.py  schemas.py
unilog/parsers/: __init__.py  apache.py  base.py  custom.py  django.py  json_log.py  nginx.py  syslog.py  windows.py
(+176 files in other folders)
