[project]
name = "unilog"
version = "0.1.0"
description = "Universal log parser — auto-detects format and returns a pandas DataFrame"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "click>=8.0.0",
    "python-dateutil>=2.8.2",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
]

[project.scripts]
unilog = "unilog.cli:cli"

[project.optional-dependencies]
anomaly = ["scipy>=1.10.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
