[project]
name = "unilog"
version = "0.1.0"
description = "Universal log parser — auto-detects format and returns a pandas DataFrame"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "click>=8.0.0",
    "python-dateutil>=2.8.2",
    "rich>=15.0.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.19",
    "slowapi>=0.1.9",
    "defusedxml>=0.7.1",
]

[project.scripts]
unilog = "unilog.cli:cli"

[project.optional-dependencies]
anomaly = ["scipy>=1.10.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
    "pip-audit>=2.0.0",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "performance: benchmark tests assessing execution budgets",
]
