[project]
name = "unilog"
version = "0.1.0"
description = "Universal log parser — auto-detects format and returns a pandas DataFrame"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "click>=8.0.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.51.0",
    "websockets>=12.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.19",
    "slowapi>=0.1.9",
    "defusedxml>=0.7.1",
]



[project.scripts]
unilog = "unilog.cli:cli"

[project.optional-dependencies]
anomaly = ["scipy>=1.10.0"]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.21",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
    "pip-audit>=2.0.0",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "performance: benchmark tests assessing execution budgets",
]
